--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url =jdbc:mysql://localhost:3306/springboot_jwt_db
+spring.datasource.url =jdbc:mysql://localhost:3306/spring_boot_jwt_db
 spring.datasource.username=root
 spring.datasource.password=hayui13072000
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
